--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.0",
     "nodemon": "^2.0.15",
     "otplib": "^12.0.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "speakeasy": "^2.0.0"
   }
 }
